Revert "WIP merge picard"
This reverts commit eacbfa6b3cf489c8a4f023e1ee07bfdf8e877d56.